[tool.poetry]
name = "harbor-proxy"
version = "0.13.0"
description = "Dynamic reverse proxy controller with TTL-based service registry"
authors = ["Benoît Allard <benoit.allard@gmx.de>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "harbor" }]
keywords = ["proxy", "service-registry", "caddy", "reverse-proxy"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
httpx = "^0.28"
pyyaml = "^6.0"
watchdog = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-flask = "^1.3"
black = "^24.0"
ruff = "^0.4"
pytest-httpx = "^0.35"

[tool.poetry.scripts]
harbor = "harbor.app:main"

[tool.poetry.urls]
Homepage = "https://github.com/benallard/harbor"
Repository = "https://github.com/benallard/harbor"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
